--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -197,7 +197,7 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
-<!--                 <div class="form-group city">
+                <div class="form-group city">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -208,7 +208,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.city" [suggestions]="filteredCitiesOptions" (completeMethod)="searchCities($event)" #citiesAutocomplete
                           (onFocus)="selectInput('city'); citiesAutocomplete.handleDropdownClick();" dropdownMode="current"
-                          field="name" formControlName="city" emptyMessage="Nenhum resultado" placeholder="Qual a cidade onde você reside?"></p-autoComplete>
+                          field="name" formControlName="city" name='city' emptyMessage="Nenhum resultado" placeholder="Qual a cidade onde você reside?"  (onSelect)="filterUniversities(user.city)"></p-autoComplete>
                         <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('city')" *ngIf="user.city"></i>
                       </div>
                     </div>
@@ -216,7 +216,7 @@
                   <div *ngIf="isValidStudy('city')" class='error-message'>
                     Por favor, selecione sua cidade
                   </div>
-                </div> -->
+                </div>
                 <!-- <div class="form-group scholarity">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
@@ -239,7 +239,7 @@
                 </div> -->
                 <!-- <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6 && user.city" class="animated fadeIn faster"> -->
                 <div class="animated fadeIn faster">
-                  <div class="form-group  university">
+                  <div class="form-group  university" *ngIf='user.city.name'>
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -302,28 +302,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- <div class="form-group when_can_travel">
-                  <div class="input-group select-dropdown">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-plane"></i> Quando pode viajar
-                      </div>
-                    </div>
-                    <div class="dropdown">
-                      <div class="styled-select">
-                        <p-autoComplete [(ngModel)]="user.when_can_travel" [suggestions]="filteredTravelOptions" (completeMethod)="searchTravel($event)"
-                          #travelAutocomplete (onFocus)="selectInput('when_can_travel'); travelAutocomplete.handleDropdownClick();"
-                          dropdownMode="current" field="name" formControlName="when_can_travel" emptyMessage="Nenhum resultado"
-                          placeholder="Quando terá disponiblidade para viajar?"></p-autoComplete>
-                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('when_can_travel')" *ngIf="user.when_can_travel"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div *ngIf="isValidStudy('when_can_travel')" class='error-message'>
-                    Por favor, selecione um período de tempo que estará disponível para viajar.
-                  </div>
-                </div> -->
-
                 <div class="form-group experiences-input">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
@@ -331,17 +309,17 @@
                         <i class="fas fa-book-open"></i>Quando pode viajar</div>
                     </div>
                     <div class="label-experience">
-                      Escolha o período de tempo que você estará disponível
+                      Escolha o período de tempo que você estará disponível {{user.when_can_travel.id}}
                     </div>
                   </div>
                   <div class="form-checkbox-select">
-                    <div class="checkbox-item" [(ngModel)]="user.when_can_travel" *ngFor="let travel of travelOptions">
-                      <input type="radio" id="{{travel.name}}" value="{{travel.value}}" name='travel'>
-                      <label for="language" for="{{travel.name}}">
-                        {{travel.name}}
-                      </label>
-                    </div>
-                  </div>
+                    <div class="checkbox-item" *ngFor="let travel of travelOptions">
+                     <label>
+                       <input type="radio" value="{{travel.id}}" [(ngModel)]="user.when_can_travel" name='when_can_travel' formControlName="when_can_travel">
+                       {{travel.name}}
+                     </label>
+                   </div>
+                 </div>
                 </div>
 
                 <!-- Terms -->
