--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -322,8 +322,8 @@
                         <i class="fas fa-check"></i>
                       </div>
                     </div>
-                    <div *ngIf="isValidPersonal('fullname')" class='error-message'>
-                      Preencha o nome completo.
+                    <div *ngIf="submittedStudy && !user.other_university" class='error-message'>
+                      Por favor, digite uma universidade válida.
                     </div>
                   </div>
                   <div class="form-group college_course">
