fix(landing page): change 'class' to 'id' - carousel-wrapper

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -294,7 +294,7 @@
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
           <div class="carousel-container">
-            <div class='carousel-wrapper' class='carousel-wrapper'>
+            <div class='carousel-wrapper' id='carousel-wrapper'>
               <div class="each-carousel-item">
                 <div class="cases case-1" drag-scroll-item>
                   <div class="box-case-bg"></div>
