--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -415,7 +415,7 @@
                         <i class="fas fa-file"></i>Currículo
                       </div>
                     </div>
-                    <input type="file" class="form-control" name="curriculum" required>
+                    <input type="file" class="form-control" [(ngModel)]="user.curriculum" (change)="onFileChange($event)" formControlName="curriculum"/>
 
                     <!-- mobile -->
                     <i class="fas fa-user mobile mobile-icon"></i>
@@ -423,9 +423,9 @@
                       <i class="fas fa-check"></i>
                     </div>
                   </div>
-                  <!-- <div *ngIf="isValidStudy('curriculum')" class='error-message'>
+                  <div *ngIf="isValidStudy('curriculum')" class='error-message'>
                     Envie seu currículo
-                  </div> -->
+                  </div>
                 </div>
 
                 <!-- Terms -->
