fix(form ge and gt): gt - remove 'when_can_travel' area and values, ge - fix input responsive layout

--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -417,7 +417,7 @@
                     <input type="file" class="form-control" [(ngModel)]="user.curriculum" (change)="onFileChange($event)" formControlName="curriculum"/>
 
                     <!-- mobile -->
-                    <i class="fas fa-user mobile mobile-icon"></i>
+                    <i class="fas fa-file mobile mobile-icon"></i>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
