--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -341,26 +341,6 @@
                     Selecione um nível de inglês.
                   </div>
                 </div>
-                <div class="form-group experiences-input">
-                  <div class="input-group select-dropdown">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-book-open"></i>Quando pode viajar</div>
-                    </div>
-                    <div class="label-experience">
-                      Escolha o período de tempo que você estará disponível
-                    </div>
-                  </div>
-                  <div class="form-checkbox-select">
-                    <div class="checkbox-item" *ngFor="let travel of travelOptions">
-                      <label>
-                        <input type="radio" value="{{travel.id}}" [(ngModel)]="user.when_can_travel" name='when_can_travel' formControlName="when_can_travel">
-                        {{travel.name}}
-                      </label>
-                    </div>
-                  </div>
-                </div>
-
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
@@ -371,7 +351,7 @@
                     <input type="file" class="form-control" [(ngModel)]="user.curriculum" (change)="onFileChange($event)" formControlName="curriculum"/>
 
                     <!-- mobile -->
-                    <i class="fas fa-user mobile mobile-icon"></i>
+                    <i class="fas fa-file mobile mobile-icon"></i>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
